crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_tx_create_collision.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(baseline_result, result)"
---
[
  {
    "Halt": {
      "reason": "CreateCollision",
      "gas": {
        "gas_spent": 16777216,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12384,
        "reservoir_remaining": 0
      },
      "logs": []
    }
  },
  {
    "Halt": {
      "reason": "CreateCollision",
      "gas": {
        "gas_spent": 16777216,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 24384,
        "reservoir_remaining": 10
      },
      "logs": []
    }
  }
]
