crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_tx_create_initcode_halts.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(baseline_result, result)"
---
[
  {
    "Halt": {
      "reason": "InvalidFEOpcode",
      "gas": {
        "gas_spent": 1000000000,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12384,
        "reservoir_remaining": 0
      },
      "logs": []
    }
  },
  {
    "Halt": {
      "reason": "InvalidFEOpcode",
      "gas": {
        "gas_spent": 1000000000,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 24384,
        "reservoir_remaining": 0
      },
      "logs": []
    }
  }
]
